infrastructure/gitops/_templates/service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: SERVICE_NAME
  namespace: SERVICE_NAMESPACE
  labels:
    app.kubernetes.io/name: SERVICE_NAME
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: SERVICE_NAME
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
